# tobi_picknplace

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  package.xml
biron_posture_execution_msgs/: CMakeLists.txt  package.xml
biron_posture_execution_msgs/srv/: BironPostureExecution.srv
config/: exampleTransitions.cfg  h2r5.yaml  katana.yaml
launch/: calib_tobi_picknplace_server.launch  tobi_picknplace_server.launch
scripts/: katana-angles  katana-gripper-close  katana-gripper-close-by-force  katana-gripper-open  katana-gripper-open-when-touching  katana-gripper-position  katana-gripper-sensors  katana-motors-off  katana-motors-on  katana-pose-list  katana-pose-nearest
src/: picknplace_client.cpp  picknplace_server.cpp
src/control/: ControlStrategy.h  Controller.cpp  Controller.h  ViaPoseStrategy.cpp  ViaPoseStrategy.h
src/grasping/: CentroidGrasping.cpp  CentroidGrasping.h  GraspGenerator.h
src/interface/: AGNIInterface.cpp  AGNIInterface.h  ControlInterface.h  ControlInterfaceListener.h  RsbInterface.cpp  RsbInterface.h  ServiceInterface.cpp  ServiceInterface.h  ViewInterface.cpp  ViewInterface.h
src/model/: GraspGenerator.cpp  GraspGenerator.h  KatanaModel.cpp  KatanaModel.h  KatanaSimModel.cpp  KatanaSimModel.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelListener.h  ModelTypes.h
src/model/types/: H2R5.cpp  H2R5.h  Katana.cpp  Katana.h  KatanaSim.cpp  KatanaSim.h
src/test/: test_transformTF.cpp
src/util/: Dijkstra.cpp  Dijkstra.h  ParamReader.cpp  ParamReader.h  RosTools.cpp  RosTools.h  TransformerTF.cpp  TransformerTF.h  Transition.h  TransitionReader.cpp  TransitionReader.h
srv/: BironPostureExecution.srv
